[workspace]
resolver = "2"
members = [
    "arch/aarch64",
    "arch/x86-64",
    "gui",
    "kernel",
    "macros",
    "src/fs",
    "src/llt",
    "src/obconf",
    "src/tls",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[patch.crates-io]
winit = { git = "https://github.com/obhq/winit.git" }
