[workspace]
resolver = "2"
members = [
    "arch/aarch64",
    "arch/x86-64",
    "config",
    "gui",
    "kernel",
    "lib/bitflag",
    "lib/krt",
    "macros",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[patch.crates-io]
winit = { git = "https://github.com/obhq/winit.git" }
