[workspace]
resolver = "2"
members = [
    "config",
    "gui",
    "kernel",
    "lib/aarch64",
    "lib/bitflag",
    "lib/hv",
    "lib/krt",
    "lib/x86-64",
    "macros",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[patch.crates-io]
winit = { git = "https://github.com/obhq/winit.git" }
