[package]
name = "config"
version = "0.1.0"
edition = "2024"

[features]
serde = ["dep:serde", "dep:serde_bytes"]
virt = ["dep:num_enum"]

[dependencies]
num_enum = { version = "0.7.3", default-features = false, optional = true }
serde = { version = "1.0.210", features = [
    "derive",
], default-features = false, optional = true }
serde_bytes = { version = "0.11.17", optional = true }
