[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "obliteration"
path = "src/main.rs"

[dependencies]
bitfield-struct = "0.9.2"
ciborium = "0.2.2"
clap = { version = "4.5.21", features = ["derive"] }
gdbstub = "0.7.3"
gdbstub_arch = "0.3.1"
humansize = "2.1.3"
libc = "0.2.164"
obconf = { path = "../src/obconf", features = ["serde", "virt"] }
obfw = { git = "https://github.com/obhq/firmware-dumper.git", features = [
    "read",
    "std",
] }
open = { version = "5.3.1" }
raw-window-handle = "0.6.2"
serde = { version = "1.0.209", features = ["derive"] }
thiserror = "1.0"
uuid = { version = "1.11.0", features = ["serde", "v4"] }

[dependencies.slint]
version = "1.8.0"
features = [
    "backend-winit",
    "compat-1-2",
    "raw-window-handle-06",
    "renderer-femtovg",
    "std",
]
default-features = false

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64 = { path = "../arch/aarch64" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86-64 = { path = "../arch/x86-64" }

[target.'cfg(not(target_os = "macos"))'.dependencies.ash]
version = "0.38.0"
features = ["linked", "std"]
default-features = false

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32",
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_Hypervisor",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
]

[target.'cfg(target_os = "linux")'.dependencies.ashpd]
version = "0.10.2"
features = ["async-std", "raw_handle"]
default-features = false

[target.'cfg(target_os = "macos")'.dependencies]
applevisor-sys = "0.1.3"
core-graphics-types = "0.1.3"
metal = "0.29.0"
objc = "0.2.7"

[build-dependencies]
slint-build = "1.8.0"
