[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "obliteration"
path = "src/main.rs"

[dependencies]
anstyle-parse = "0.2.6"
async-net = "2.0.0"
bytes = "1.9.0"
ciborium = "0.2.2"
clap = { version = "4.5.21", features = ["derive"] }
config = { path = "../config", features = ["serde", "virt"] }
erdp = "0.1.1"
futures = "0.3.31"
gdbstub = "0.7.3"
gdbstub_arch = "0.3.1"
hex = "0.4.3"
humansize = "2.1.3"
hv = { path = "../lib/hv" }
i-slint-core = "=1.10.0"
libc = "0.2.164"
num_enum = "0.7.3"
obfw = { git = "https://github.com/obhq/firmware-dumper.git", rev = "64787fdc0489724f0914356d925be014a2f1bf3e", features = [
    "read",
] }
open = "5.3.1"
raw-window-handle = "0.6.2"
redb = "2.2.0"
rustc-hash = "2.1.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_bytes = "0.11.17"
slint = { version = "=1.10.0", features = [
    "compat-1-2",
    "raw-window-handle-06",
    "std",
], default-features = false }
thiserror = "2.0.3"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
wae = "0.2.0"
winit = { version = "0.30.5", features = ["rwh_06"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64 = { path = "../lib/aarch64" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86-64 = { path = "../lib/x86-64" }

[target.'cfg(target_os = "linux")'.dependencies]
ash = { version = "0.37.3", features = ["linked"], default-features = false }
ashpd = { version = "0.9.2", features = [
    "async-std",
    "raw_handle",
], default-features = false }
i-slint-renderer-skia = { version = "=1.10.0", features = [
    "vulkan",
    "wayland",
    "x11",
] }
wayland-backend = { version = "0.3.7", features = ["client_system"] }
wayland-client = "0.31.7"
wayland-protocols = "0.32.5"
xdg = "2.5.2"

[target.'cfg(target_os = "windows")'.dependencies]
ash = { version = "0.37.3", features = ["linked"], default-features = false }
i-slint-renderer-skia = "=1.10.0"
windows = { version = "0.58.0", features = [
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
] }
windows-sys = { version = "0.59.0", features = [
    "Win32",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System",
    "Win32_System_Com",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_UI",
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.0"
core-foundation = "0.10.0"
core-foundation-sys = "0.8.7"
core-graphics-types = "0.1.3"
i-slint-renderer-skia = "=1.10.0"
metal = "0.29.0"
objc2 = "0.6.0"
objc2-app-kit = "0.3.0"
objc2-foundation = "0.3.0"
objc2-uniform-type-identifiers = "0.3.0"
vtable = "0.2.1"

[build-dependencies]
slint-build = "=1.10.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
