[package]
name = "obkrnl"
version = "0.1.0"
edition = "2021"

[dependencies]
anstyle = { version = "1.0.8", default-features = false }
bitfield-struct = "0.9.2"
hashbrown = "0.14.5"
macros = { path = "../macros" }
obconf = { path = "../src/obconf", features = ["virt"] }
talc = { version = "4.4.1", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86-64 = { path = "../arch/x86-64" }
