[package]
name = "obkrnl"
version = "0.1.0"
edition = "2024"

[dependencies]
bitfield-struct = "0.9.2"
bitflag = { path = "../lib/bitflag" }
config = { path = "../config" }
hashbrown = "0.14.5"
krt = { path = "../lib/krt" }
macros = { path = "../macros" }
talc = { version = "4.4.1", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86-64 = { path = "../arch/x86-64" }
