[workspace]
resolver = "2"
members = [
    "core",
    "elf",
    "error",
    "fs",
    "ftp",
    "gmtx",
    "kernel",
    "llt",
    "macros",
    "param",
    "pfs",
    "pkg",
    "system",
    "tls"
]

default-members = ["core", "kernel"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
