[workspace]
resolver = "2"
members = [
    "core",
    "elf",
    "error",
    "fs",
    "ftp",
    "gmtx",
    "hv",
    "kernel",
    "llt",
    "macros",
    "param",
    "pfs",
    "pkg",
    "tls"
]

default-members = ["core", "kernel"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
