[workspace]
resolver = "2"
members = [
    "core",
    "error",
    "fs",
    "ftp",
    "gmtx",
    "kernel",
    "llt",
    "macros",
    "obkrnl",
    "param",
    "pfs",
    "pkg",
    "tls"
]

default-members = ["core", "kernel"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
