[package]
name = "hv"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.11"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64 = { path = "../aarch64" }
bitfield-struct = "0.10.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86-64 = { path = "../x86-64" }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.170"

[target.'cfg(target_os = "macos")'.dependencies]
applevisor-sys = "0.1.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = "0.59.0"
