[package]
name = "core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
humansize = "2.1.3"
libc = "0.2.155"
obfw = { git = "https://github.com/obhq/firmware-dumper.git", features = ["read", "std"] }
param = { path = "../param" }
pkg = { path = "../pkg" }
thiserror = "1.0"

[build-dependencies]
cbindgen = "0.26.0"
