[package]
name = "core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
humansize = "2.1.3"
libc = "0.2.155"
obfw = { git = "https://github.com/obhq/firmware-dumper.git", features = ["read", "std"] }
obvirt = { path = "../obvirt" }
param = { path = "../param" }
pkg = { path = "../pkg" }
thiserror = "1.0"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32",
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_Hypervisor",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
]

[target.'cfg(target_os = "macos")'.dependencies]
hv-sys = "0.1.1"

[build-dependencies]
cbindgen = "0.26.0"
