[package]
name = "core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
humansize = "2.1.3"
libc = "0.2.155"
obconf = { path = "../obconf" }
obfw = { git = "https://github.com/obhq/firmware-dumper.git", features = ["read", "std"] }
obvirt = { path = "../obvirt" }
param = { path = "../param" }
pkg = { path = "../pkg" }
postcard = { version = "1.0.10", features = ["use-std"], default-features = false }
serde = { version = "1.0.209", features = ["derive"] }
thiserror = "1.0"
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
ash = "0.38.0"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32",
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_Hypervisor",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
]

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics-types = "0.1.3"
hv-sys = "0.1.1"
metal = "0.29.0"
objc = "0.2.7"

[build-dependencies]
cbindgen = "0.26.0"
