[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.3"

[target.'cfg(not(target_os = "macos"))'.dependencies]
ash = { version = "0.38.0", features = ["linked", "std"], default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
applevisor-sys = "0.1.3"
core-graphics-types = "0.1.3"
metal = "0.29.0"
objc = "0.2.7"
