[package]
name = "hv"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.57"

[target.'cfg(unix)'.dependencies]
libc = "0.2.153"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
features = [
    "Wdk",
    "Wdk_Foundation",
    "Wdk_Storage",
    "Wdk_Storage_FileSystem",
    "Win32",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Hypervisor",
    "Win32_System_IO",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Time",
    "Win32_System_WindowsProgramming",
]
