[package]
name = "hv"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.57"

[target.'cfg(unix)'.dependencies]
libc = "0.2.153"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
features = [
    "Win32",
    "Win32_System",
    "Win32_System_Hypervisor",
    "Win32_System_Memory",
    "Win32_System_SystemInformation"
]

[build-dependencies]
cc = "1.0.90"
