[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "obkrnl"
path = "src/main.rs"

[dependencies]
bitflags = "2.1"
bytemuck = "1.14.0"
byteorder = "1.4"
clap = { version = "4.1", features = ["derive"] }
discord-rich-presence = "0.2"
elf = { path = "../elf" }
gmtx = { path = "../gmtx" }
iced-x86 = { version = "1.18", features = ["code_asm"] }
libc = "0.2"
llt = { path = "../llt" }
llvm-sys = { version = "170.0.0", features = ["strict-versioning", "prefer-static"] }
macros = { path = "../macros" }
param = { path = "../param" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sha1 = "0.10"
sysinfo = { version = "0.30.0", default-features = false }
termcolor = "1.2.0"
thiserror = "1.0"
tls = { path = "../tls" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_Memory", "Win32_System_SystemInformation", "Win32_System_Threading"] }
