[package]
name = "kernel"
version = "0.1.0"
description = "Free and open-source alternative PlayStation 4 kernel for Windows, Linux and macOS"
edition = "2021"

[dependencies]
bitflags = "2.1"
bytemuck = "1.14.0"
byteorder = "1.4"
clap = { version = "4.1", features = ["cargo", "derive"] }
discord-rich-presence = "0.2"
gmtx = { path = "../gmtx" }
iced-x86 = { version = "1.18", features = ["code_asm"] }
libc = "0.2"
llt = { path = "../llt" }
macros = { path = "../../macros" }
param = { path = "../param" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sha1 = "0.10"
sysinfo = { version = "0.30.0", default-features = false }
termcolor = "1.2.0"
thiserror = "1.0"
tls = { path = "../tls" }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
features = [
    "Wdk",
    "Wdk_Foundation",
    "Wdk_Storage",
    "Wdk_Storage_FileSystem",
    "Win32",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Hypervisor",
    "Win32_System_IO",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Time",
    "Win32_System_WindowsProgramming",
]
